make NEVER_SIGNED be null, and conversion logic associated, as well as go back to using sync writer.
Signed-off-by: Paul Harris <paul.harris@consensys.net>